# django-template

./: .env  Dockerfile  Makefile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
app/: compose.yml
app/carts/: models.py  services.py  tests.py  urls.py  views.py
app/carts/domain/: app.py  models.py  repositories.py
app/carts/domain/command/: checkout_cart.py
app/carts/migrations/: 0001_initial.py
app/djangotemplate/: settings.py
app/metrics/: callbacks.py  models.py  views.py
app/metrics/domain/: app.py  models.py  repositories.py
app/metrics/migrations/: 0001_initial.py
app/orders/: callbacks.py  models.py  services.py  urls.py  views.py
app/orders/domain/: app.py  models.py  repositories.py
app/orders/migrations/: 0001_initial.py
app/outbox/: services.py  tests.py
app/outbox/domain/: app.py  models.py
cart/: models.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py
carts/: services.py  tasks.py  tests.py  urls.py  views.py
carts/management/commands/: custom_publish.py
djangotemplate/: celery.py  settings.py  stomp.py  urls.py
integration_tests/: Dockerfile  compose.yml  main.py
metrics/: callbacks.py  models.py  services.py  tests.py  urls.py  views.py
metrics/migrations/: 0001_initial.py
orders/: callbacks.py  services.py  tests.py  urls.py  views.py
orders/management/commands/: custom_consume.py
orders/migrations/: 0001_initial.py
outbox/: models.py  services.py  tests.py
outbox/migrations/: 0001_initial.py
(+9 files in other folders)
