[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["brenosss <brenoe133@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
